implemented the last watcher request (without unit tests)
